changed z-index of footer to -1 and background color of most elements to white footer no longer overlaps other elements / disappears under buttons
still poking out on far right at the searchbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,6 +28,7 @@ color:black;}
     display:block;
     max-height: 50vh;
     color:#222;
+    background-color: white;
     }
 
 
@@ -59,6 +60,7 @@ margin-right: 0px;
 .glogo {
 
 margin: 20px;
+background-color: white;
 }
 .center {
 display:flex;
@@ -66,6 +68,7 @@ flex-wrap:wrap;
 flex-direction:column;
 justify-content:center;
 align-items:center;
+background-color: white;
 
 
 }
@@ -77,6 +80,7 @@ display:flex;
 border-radius: 25px;
 border: 1px solid #D3D3D3;
 align-items:center;
+background-color: white;
 }
 .searchbar {
 
@@ -121,6 +125,7 @@ color:#222;
 
 min-height:25vh;
 max-height:55vh;
+background-color: white;
 }
 
 /*buffer bottom */
@@ -130,6 +135,7 @@ max-height:55vh;
 
 min-height: 20vh;
 max-height:55vh;
+
 }
 
 
@@ -140,28 +146,31 @@ bottom: 15px;
 text-align: center;
 width:95%;
 opacity:.7;
+z-index: -1;
  } 
 
 .b-center { 
     position: relative;
-   bottom:40px;
+   bottom:30px;
      }
+     
 .b-left { 
  float:left;
- padding-left: 55px; 
+ padding-left: 65px; 
  }
 
  .b-right {
 float:right;
-padding-right: 95px;
+padding-right: 105px;
       }
-  
+
 body {
 min-height:100px;
 font-size: 14px;
 font-family: 'nato', sans-serif;
 height:95vh;
 max-height: 100vh;
+
 }
 
 
